<resources>
    <string name="app_name"> TMK EL Spotcheck </string>
    <string name="sectionb_mainheading">سيڪشن بي: گھراڻي جي سڃاڻپ ۽ آبادياتي معلومات</string>
    <string name="sectionc_mainheading">سيڪشن سي:   تعارف ۽ اجازت نامو </string>
    <string name="sectiond_mainheading">سيڪشن ڊي:  گھراڻي جي فردن متعلق معلومات</string>
    <string name="sectione_mainheading">سيڪشن اِي:  گھراڻي جي معاشي ۽ سماجي حيثيت</string>
    <string name="sectionf_mainheading">SECTION F: SECTION F</string>
    <string name="sectiong_mainheading">SECTION G: SECTION G</string>
    <string name="sectionh_mainheading">SECTION H: SECTION H</string>
    <string name="sectioni_mainheading">SECTION I: SECTION I</string>
    <string name="sectionj_mainheading">SECTION J: SECTION J</string>
    <string name="sectionk_mainheading">SECTION K: SECTION K</string>
    <string name="sectionl_mainheading">SECTION L: SECTION L</string>
    <string name="sectionn_mainheading">Section N: Section N</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="yes"> ها </string>
    <string name="no"> نه </string>
    <string name="dkn"> خبر نه آهي </string>
    <string name="none"> ڪو به نه </string>
    <string name="never"> ڪڏهن به نه </string>
    <string name="na"> قابل اطلاق / دستیاب ناهي  </string>
    <string name="nap"> قابل اطلاق ناهي </string>
    <string name="nav"> دستياب ناهي </string>
    <string name="ref"> انڪار ڪري ڇڏيو </string>
    <string name="other"> ٻيو ڪجهه </string>
    <string name="specify"> وضاحت ڪريو </string>
    <string name="year"> سال </string>
    <string name="month"> مهينو </string>
    <string name="weeks"> هفتا </string>
    <string name="days"> ڏينهن </string>
    <string name="hours"> ڪلاڪ </string>
    <string name="minutes"> منٽ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> ڪلو ميٽر </string>
    <string name="cm"> سينٽي ميٽر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپيا </string>
    <string name="num"> آنگ / اعداد </string>
    <string name="name"> نالو </string>
    <string name="contactnum"> رابطہ نمبر </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="newHHheadname"> نیا سربراہ کا نام </string>
    <string name="elb_title1">سيڪشن بي؛ گھراڻي جي سڃاڻپ ۽ آبادياتي معلومات</string>
    <string name="elb_title2"> ھي سيڪشن گھراڻي جي سربراھ يا 18 سال ۽ ان کان وڌيڪ عمر جي ڪنهن سمجھدار شخص کان پڇيو ويندو</string>
    <string name="elb1">ڪلسٽر نمبر</string>
    <string name="elb2">ڪلسٽر جو قسم</string>
    <string name="elb201">ليڊي ھيلٿ ورڪر پاران سنڀال </string>
    <string name="elb202">ليڊي ھيلٿ ورڪر پاران نه  سنڀال </string>
    <string name="elb203">ليڊي ھيلٿ ورڪر پاران جزوي سنڀال </string>
    <string name="elb3">فارم سيريل نمبر (پاڻمرادو)</string>
    <string name="elb4">صوبو</string>
    <string name="elb5">ضلعو</string>
    <string name="elb6">تعلقو</string>
    <string name="elb601">ٽنڊو محمد خان </string>
    <string name="elb602">ٽنڊو غلام حيدر </string>
    <string name="elb603">بلڙي شاھ ڪريم </string>
    <string name="elb7">يونين ڪائونسل</string>
    <string name="elb701"> لاکاٽ</string>
    <string name="elb702"> شيخ ڀرڪيو</string>
    <string name="elb703"> ٽنڊو سائينداد</string>
    <string name="elb704"> ڏندو</string>
    <string name="elb705">غلام شاھ باگڙاڻي</string>
    <string name="elb706">نظر پور </string>
    <string name="elb707"> سعيد خان لنڊ</string>
    <string name="elb708">ملا ڪاتيار</string>
    <string name="elb709">سعيد متو </string>
    <string name="elb710">سعيد پور ٽڪر</string>
    <string name="elb8">ڳوٺ جو نالو</string>
    <string name="elb8a">ڳوٺ جو ڪوڊ</string>
    <string name="elb09">علائقو</string>
    <string name="elb0901">شھري</string>
    <string name="elb0902">ٻھراڙي </string>
    <string name="elb0903">گڏيل سڏيل</string>
    <string name="elb10">پاڙو / بلاڪ</string>
    <string name="elb11">گھر نمبر</string>
    <string name="elb12">انٽرويو جي تاريخ</string>
    <string name="elc_title11"> سيڪشن سي؛ تعارف ۽ اجازت نامو </string>
    <string name="elc_title12"> ھي سيڪشن گھراڻي جي سربراھ يا 18 سال ۽ ان کان وڌيڪ عمر جي ڪنهن سمجھدار شخص کان پڇيو ويندو. </string>
    <string name="elc_title21"> اجازت نامو ۽ تعارف زور سان پڙھي ٻڌايو </string>
    <string name="elc_title22"> السلام عليڪم: </string>
    <string name="elc_title23"> منھنجو نالو (انٽرويو ڪندڙ جو نالو) آھي </string>
    <string name="elc_title24"> ۽ آئون ڊويزن آف وومن اينڊ چائلڊ ھيلٿ، آغا خان يونيورسٽي ڪراچي سان گڏ ڪم ڪري رھي / رھيو آھيان، جيڪا صوبائي صحت کاتي سنڌ جي تعاون سان ٽندي محمد خان ضلعي ۾ پنجن سالن کان گھٽ عمر وارن ٻار جي صحت متعلق ھڪ پروجيڪٽ ڪري رھي آهي. هي پراجيڪٽ  اهڙي سماجي سڄاڻ ۽ سا هتا ساڻ آهي جيڪا دستن جي بيماري ۽ نمونيا جي مرض ۾احتياطي تدابير ۽ علاج واسطي پنجن سالن کان گھٽ عمر جي ٻارن جي صحت جو خيال رکندي. ان سلسلي ۾ اسان صحت جي متعلق ٽنڊي محمد خان ضلعي مان معلومات گڏ ڪري رھيا آھيون. هيءَ معلومات اسان کي  پنجن سالن کان گھٽ عمر وارن ٻارن جي صحت جي متعلق ڄاڻ، روين ۽ طريقن جي معلومات ۽ ان سان گڏوگڏ بيمارين ۽ موت جي شرح کي سمجھڻ ۾ مدد ڪندي. ھيءَ معلومات پنجن سالن کان گھٽ عمر وارن ٻارن جي صحت کي سڌارڻ ۾ مدد ڪندي، خاص طور تي جيڪي خدمتون سرڪار ۽ صحت ڪارڪن توھان جي علائقي ۾ مھيا ڪن ٿا. ھن انٽرويو ڪرڻ لاءِ تقريبًا 35 کان 40 منٽن جو وقت لڳي سگھي ٿو. اسين توھان جي تعاون جا شڪرگذار آھيون، توھان جي ڏنل جوابن کي راز ۾ رکيو ويندو، ھن سروي ۾ توھان جي شموليت مڪمل طور رضاڪاراڻا ھوندي. جيڪڏھن توھان ڪنھن سوال يا سوال نامي جي ڪنهن حصي ۾ معلومات نه ٿا ڏيڻ چاھيو ته توھان اسان کي ٻڌايو. توھان ھن انٽرويو مان ڪنھن به وقت دستبردار ٿي سگھو ٿا. </string>
    <string name="elc1">ڇا توھان کي مٿي مھيا ڪيل معلومات مان ھن وقت مون کان ڪو سوال ڪرڻو آھي؟</string>
    <string name="elc101">ھا </string>
    <string name="elc102">نه </string>
    <string name="elc2">ڇا ھاڻي آئون انٽرويو شروع ڪري سگھان ٿي/ٿو؟</string>
    <string name="elc201">ھا </string>
    <string name="elc202">نه </string>
    <string name="elc3">جواب ڏيڻ واري جو نالو  </string>
    <string name="elc4">جواب ڏيڻ واري جي جنس</string>
    <string name="elc401">مرد</string>
    <string name="elc402">عورت</string>
    <string name="elc5">جواب ڏيندڙ جي عمر</string>
    <string name="elc501">سال </string>
    <string name="elc502">مهينا</string>
    <string name="elc6">ڇا توھان جي گھر ۾ پنجن سالن کان گھٽ عمر جو ٻار آھي؟</string>
    <string name="elc601">ھا</string>
    <string name="elc602">نه </string>
    <string name="elc7">گھراڻي جي انٽريو جو نتيجو (جيڪڏھن انٽريو مڪمل نه  ٿيو ھجي ته  صحيع آپشن لاءِ سپروائزر سان مشورو ڪريو)</string>
    <string name="elc701">مڪمل ٿيو </string>
    <string name="elc702">گھر ۾ ڪوبه ماڻھو يا صحيع انٽريو ڏيڻ وارو ماڻھو موجود نه  آھي </string>
    <string name="elc703">گھراڻي جا فرد ڊگھي عرصي لاءِ گھر مان غير حاضر ھئا </string>
    <string name="elc704">انٽرويو ڏيڻ کان انڪار ڪيو ويو </string>
    <string name="elc705">گھر خالي آھي غير رھائشي آھي </string>
    <string name="elc706">گھر نه  مليو </string>
    <string name="elc707">5 سالن کان گهٽ عمر جو ٻار نه آهي </string>
    <string name="elc708">گھر عارضي طور بند آھي </string>
    <string name="elc796"> ٻيو ڪجهه (وضاحت ڪريو)</string>
    <string name="mmd_title1">سيڪشن ڊي؛ گھراڻي جي فردن متعلق معلومات (ھي سيڪشن گھراڻي جي سربراھ يا 18 سال ۽ ان کان وڌيڪ عمر جي ڪنهن سمجھدار شخص کان پڇيو ويندو)</string>
    <string name="mmd_title2">ھدايتون؛ ھاڻي آئون توھان کان توھان جي گھر جي انهن سڀني فردن، ڀاتين جي باري ۾ معلومات وٺنديس جيڪي توھان سان گڏ رھن ٿا ۽ ھڪ ئي چلھ تي پچائن ۽ کائن ٿا.</string>
    <string name="mmd1">سيرل نمبر؟</string>
    <string name="mmd2">نالو (مھرباني ڪري مونکي ھن گھر ۾ رھندڙ سڀني فردن جا نالا ٻڌايو، خاندان جي سربراھ کان شروع ڪريو)</string>
    <string name="mmd3">گھراڻي جي سربراھ سان رشتو؟</string>
    <string name="mmd301">گھر جو سربراھ</string>
    <string name="mmd4">جنس</string>
    <string name="mmd401">مرد</string>
    <string name="mmd402">عورت</string>
    <string name="mmd403">ٽئين جنس</string>
    <string name="mmd302">مڙس، زال</string>
    <string name="mmd303">پٽ، ڌيءُ</string>
    <string name="mmd304">ننھن، نياڻو</string>
    <string name="mmd305">پوٽو، پوٽي، ڏوھٽو، ڏوھٽي</string>
    <string name="mmd306">والدين</string>
    <string name="mmd5"> انالي جي تاريخ پئدائش ؟ (جيڪڏھن مھينو يا تاريخ معلوم نه ھجي ته 98 لکو جيڪڏھن سال معلوم نه ھجي ته 99 لکو) </string>
    <string name="mmd307">سس، سھرو</string>
    <string name="mmd308">ڀاءُ، ڀيڻ</string>
    <string name="mmd309">سالو، سالي، ڀيڻويو</string>
    <string name="mmd310">ڀائٽيو، ڀائٽي، ڀاڻيجو، ڀاڻيجي</string>
    <string name="mmd311">ڏاڏو، ڏاڏي، نانو، ناني</string>
    <string name="mmd312">چاچو چاچي، مامو، مامي، پڦڙ، پڦي</string>
    <string name="mmd313">ماٽيلو، نپاڄ ٻار، </string>
    <string name="mmd314"> گھريلو ملازم، گڏ رھندڙنوڪر</string>
    <string name="mmd315">ٻيو ڪجھ</string>
    <string name="mmd6">نالي) جي عمر ڪيتري آھي؟ مڪمل سال لکو جيڪڏھن معلوم نه آھي ته 98 لکو (جيڪڏھن عمر 95 سالن کان وڌيڪ ھجي ته 95 لکو)</string>
    <string name="mmd7">ازدواجي حيثيت؟   (10 سالن کان وڌيڪ عمر)</string>
    <string name="mmd701">شادي شدھ</string>
    <string name="mmd702">غير شادي شدھ</string>
    <string name="mmd703">بيوھ، رنڊوھ</string>
    <string name="mmd704">طلاق يافته ,زال يا مڙس کان الڳ رھندڙ</string>
    <string name="mmd799">99 لاڳو نه  آھي (10 سالن کان گھٽ عمر وارن لاءِ)</string>
    <string name="mmd08">پيءُ جو نالو؟ جيڪڏهن پيءُ جو نالو  ميمبر لسٽ ۾ نه آهي ته اين اي لکو </string>
    <string name="mmd0801">لائن نمبر</string>
    <string name="mmd9">ماءُ جو نالوجيڪڏهن ماءُ جو نالو لسٽ ۾ موجود نه آهي ته اين اي  لکو</string>
    <string name="mmd10">نالو ڪڏھن به اسڪول ويو آھي ؟   (3 سالن کان وڌيڪ عمر وارن لاءِ)</string>
    <string name="mmd1001">ھا</string>
    <string name="mmd1002">نه</string>
    <string name="mmd11">تعليم؟ (3 سالن کان وڌيڪ عمر وارن لاءِ سالن ۾ لکو)</string>
    <string name="mmd1100">هڪ سال کان گھٽ تعليم</string>
    <string name="mmd1101">1 ڪلاس</string>
    <string name="cmf10">ڇا ليڊي هيلٿ ورڪرتوهان جي گهروزٽ تي ايندي آهي؟</string>
    <string name="cmf1001">ھا </string>
    <string name="cmf1002">نه </string>
    <string name="cmf1003">ڪڏهن به نه </string>
    <string name="cmf1098">معلوم نه آهي </string>
    <string name="cmf11">جيڪڏھن ها ته ليڊي هيلٿ ورڪرتوهان جي گهروزٽ تي اڪثر ڪري گهڻا ڀيرا ايندي آهي؟</string>
    <string name="cmf1101">هفتي ۾ هڪ ڀيرو-</string>
    <string name="cmf1102">ٻن هفتن ۾ هڪ ڀيرو. </string>
    <string name="cmf1103">مھيني ۾ هڪ ڀيرو</string>
    <string name="cmf1104">ضرورت وقت</string>
    <string name="cmf1196">ٻيوڪجهه (وضاحت ڪريو) </string>
    <string name="cmf12">ليڊي هيلٿ ورڪر ڪهڙيون خدمتون مهيا ڪري ٿي؟ (هڪ کان وڌيڪ جواب اچي سگهن ٿا)</string>
    <string name="cmf1201">پوليو مهم </string>
    <string name="cmf1202">معمول مطابق ٽڪا لڳائڻ </string>
    <string name="cmf1203">توليدي صحت </string>
    <string name="cmf1204">ٻارن جي بيماري </string>
    <string name="cmf1205">پنج سال کان گھٽ عمر جي ٻارن جي  نشونما جاچڻ </string>
    <string name="cmf1206">صحت ۽ صفائي جي باري ۾ عام معلومات ڏيڻ </string>
</resources>