<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="24dp"
    android:theme="@style/AppThemeEnglish">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary_overlay"
        android:drawableStart="@drawable/ic_stop_yellow"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="ضروري معلومات!"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        style="@style/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/elc_title11" />

    <TextView
        style="@style/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/elc_title12" />

    <TextView
        style="@style/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elc_title21" />

    <TextView
        style="@style/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elc_title22"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/elc_title22"
        style="@style/textViewIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elc_title23" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textViewIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/elc_title24" />

    </ScrollView>

</LinearLayout>