<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.tmk_el_spotcheck.ui.sections.SectionF06Activity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!-- cmf10  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVcmf10"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_cmf10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_cmf10"
                            android:text="@string/cmf10" />

                        <TextView
                            android:id="@+id/q_cmf10"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_cmf10"
                            android:layout_alignBottom="@id/qtxt_cmf10"
                            android:text="@string/Q_cmf10" />

                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/cmf10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/cmf1001"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cmf1001" />

                        <RadioButton
                            android:id="@+id/cmf1002"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cmf1002" />

                        <RadioButton
                            android:id="@+id/cmf1003"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cmf1003" />

                        <RadioButton
                            android:id="@+id/cmf1098"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cmf1098" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:id="@+id/llcmf11t12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility='@{cmf1001.checked ? View.VISIBLE : View.GONE}'>

                <!-- cmf11  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVcmf11"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom">

                            <TextView
                                android:id="@+id/qtxt_cmf11"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/q_cmf11"
                                android:text="@string/cmf11" />

                            <TextView
                                android:id="@+id/q_cmf11"
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/qtxt_cmf11"
                                android:layout_alignBottom="@id/qtxt_cmf11"
                                android:text="@string/Q_cmf11" />
                        </RelativeLayout>

                        <RadioGroup
                            android:id="@+id/cmf11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/cmf1101"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1101" />

                            <RadioButton
                                android:id="@+id/cmf1102"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1102" />

                            <RadioButton
                                android:id="@+id/cmf1103"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1103" />

                            <RadioButton
                                android:id="@+id/cmf1104"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1104" />

                            <RadioButton
                                android:id="@+id/cmf1196"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1196" />

                            <EditText
                                android:id="@+id/cmf1196x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBaCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/cmf1196"
                                android:tag="cmf1196"
                                android:text='@{cmf1196.checked ? cmf1196x.getText().toString() : ""}'
                                android:visibility='@{cmf1196.checked? View.VISIBLE : View.GONE}' />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <!-- cmf12  CheckBox   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVcmf12"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom">

                            <TextView
                                android:id="@+id/qtxt_cmf12"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/q_cmf12"
                                android:text="@string/cmf12" />

                            <TextView
                                android:id="@+id/q_cmf12"
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/qtxt_cmf12"
                                android:layout_alignBottom="@id/qtxt_cmf12"
                                android:text="@string/Q_cmf12" />
                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/cmf12check"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:tag="0">

                            <CheckBox
                                android:id="@+id/cmf1201"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1201" />

                            <CheckBox
                                android:id="@+id/cmf1202"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1202" />

                            <CheckBox
                                android:id="@+id/cmf1203"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1203" />

                            <CheckBox
                                android:id="@+id/cmf1204"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1204" />

                            <CheckBox
                                android:id="@+id/cmf1205"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1205" />

                            <CheckBox
                                android:id="@+id/cmf1206"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cmf1206" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Exit Form"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Next Section"
                    android:textColor="@color/white" />

            </LinearLayout>
            <!--EndButton LinearLayout-->


        </LinearLayout>

    </ScrollView>

</layout>